--- a/olx/frontend/src/App.css
+++ b/olx/frontend/src/App.css
@@ -1,4 +1,5 @@
-@import url('http://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap');
+
 * {
   box-sizing: border-box;
 }
